<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            android:layout_marginBottom="16dp"
            android:textAllCaps="true"/>

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="@dimen/padding_checkbox"/>

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choc"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="@dimen/padding_checkbox"/>

        <CheckBox
            android:id="@+id/cocoa_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cocoa"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="@dimen/padding_checkbox"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_marginBottom="16dp"
            android:textAllCaps="true"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/plus"
            android:onClick="increment"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/minus"
            android:onClick="decrement"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantity_text_view"
            android:layout_marginTop="16dp"
            android:text="@string/order"
            android:onClick="submitOrder"/>


    </LinearLayout>


</ScrollView>
